[project]
name = "lobframe"
version = "0.1.0"
description = "LOBFrame: Deep Limit Order Book Forecasting (Briola et al. 2025)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML / Deep Learning
    "torch>=2.0.0",
    "lightning>=2.0.9",
    "pytorch-lightning>=2.0.9",
    "torchmetrics>=1.2.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.1.1",
    "polars>=0.19.5",
    "pyarrow>=13.0.0",
    # Science / Stats
    "scikit-learn>=1.3.1",
    "scipy>=1.11.3",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    # Graph / Topology
    "networkx>=3.0",
    "fast-tmfg>=0.0.8",
    # Experiment tracking
    "wandb>=0.15.11",
    # Utilities
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
]

[tool.uv]
managed = true
python-preference = "system"
preview = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I"]
fix = true
unsafe-fixes = false
exclude = [".git", ".venv", "build", "dist", "__pycache__", "data", "torch_datasets", "results"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "main.py",
    "utils.py",
    "data_processing",
    "loaders",
    "loggers",
    "models",
    "optimizers",
    "simulator",
]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
